@@ -1,5 +1,7 @@
 2003-02-28  Bradley Bell  <btb@icculus.org>
 
+	* main/player.h: whitespace
+
 	* main/automap.c, main/cntrlcen.c, main/collide.c,
 	main/gamerend.c: use Builtin_mission_num instead of 0 (if
 	descent.hog is present, d1 becomes mission 0)
